--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/react": "^18.2.14",
     "@vitest/coverage-v8": "^0.33.0",
+    "@weichwarenprojekt/wersion": "^1.2.1",
     "jsdom": "^22.1.0",
     "react": "*",
     "typescript": "^5.1.6",
